# bd_graduation_research

./: .env  README.md  drbac.db  example.env  pyproject.toml
_pki/playground/: enc_dec.py  gen_key.py  private.pem
actors/EntityA/: private.pem  public.pem
actors/EntityA/roles/RoleA/: private.pem  public.pem
actors/EntityA/roles/roleA/: private.pem  public.pem
actors/EntityA/users/UserA/: private.pem  public.pem
actors/EntityB/: private.pem  public.pem
actors/EntityB/users/UserB/: private.pem  public.pem
actors/hello/: private.pem  public.pem
actors/hello/world/: private.pem  public.pem
drbac/: config.py
drbac/central/: server.py
drbac/central/web/: app.py  server.key  server.pem
drbac/central/web/templates/: create.html  index.html  layout.html
drbac/connection/: __init__.py  basic_operation.py  crypto_channel.py  role_management.py  user_auth.py
drbac/crypto/: aes.py  diffie_hellman.py
drbac/crypto/interfaces/: common_key_crypto.py  crypto.py  public_key_crypto.py
drbac/database/: __init__.py
drbac/entity/: client.py
drbac/pki/: __init__.py
drbac/role/: __init__.py
pki/: README.md  utils.py
pki/playground/: common_key_cryptosystem.py  digital_sign.py  public.pem  socket_client.py  socket_server.py
